# WarnetHSRCard

./: .gitignore  README.md  pyproject.toml  setup.py
Examples/: Card.py  cache.py  character_art.py  character_id.py  creat.py  creat_profile.py  creat_profile_background.py  get_charter.py  get_info.py  is_valid_image.py  save_gif.py  set_lang.py  set_user_font.py  show.py  user_font.py
starrailcard/: honkaicard.py
starrailcard/src/generators/: author.py  five.py  four.py  one.py  profile.py  relics.py  relicts.py  three.py  tree.py  two.py  two_new.py
starrailcard/src/tools/: calculator.py  calculators.py  modal.py  openFile.py  pill.py  translation.py  treePaths.py
starrailcard/src/tools/calculator/: stats.py
starrailcard/src/tools/calculator/src/: utils.py
