[tool.poetry]
name = "starrailcard"
version = "1.2.6"
description = "Module for generating Honkai Star Rail character cards"
authors = ["None"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/DEViantUA/StarRailCard"
homepage = "https://github.com/DEViantUA/StarRailCard"

keywords = ["honkai", "cards", "generation", "honkaistarraill","raill", "starraill", "builds", "honkairail", "honkai"] 

[tool.poetry.dependencies]
Pillow = "^10.0.1"
honkairail = "^1.1.4"
python = "^3.9"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.3"
numpy = "^1.26.4"
pydantic = "1.10.13"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
cachetools = "^5.3.1"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
